<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2020 The Chromium Authors
Use of this source code is governed by a BSD-style license that can be
found in the LICENSE file.
-->

<merge
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

  <ImageView
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:layout_gravity="center_horizontal"
      android:importantForAccessibility="no"
      android:layout_marginTop="8dp"
      app:srcCompat="@drawable/chrome_sync_logo" />

  <TextView
      android:id="@+id/account_picker_header_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:layout_marginBottom="8dp"
      android:gravity="center_horizontal"
      android:textAppearance="@style/TextAppearance.Headline.Primary"/>

  <org.chromium.ui.widget.TextViewWithLeading
      android:id="@+id/account_picker_header_subtitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:gravity="center_horizontal"
      android:textAppearance="@style/TextAppearance.TextMedium.Secondary"
      app:leading="@dimen/text_size_medium_leading" />

    <!-- Using Space instead of bottom margin on the subtitle since the margin
         should be preserved if the subtitle is gone. -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"
        />
</merge>
