...
Use of this source code is governed by a BSD-style license that can be
found in the LICENSE file.
-->

<org.chromium.ui.widget.ButtonCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/account_picker_continue_as_button"
    style="@style/FilledButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginTop="8dp"
...
