...
    android:measureAllChildren="false" >

    <include
        android:id="@+id/account_picker_state_no_account"
        layout="@layout/account_picker_state_no_account" />
    <include
        android:id="@+id/account_picker_state_collapsed"
        layout="@layout/account_picker_state_collapsed" />
    <include
        android:id="@+id/account_picker_state_expanded"
        layout="@layout/account_picker_state_expanded" />
    <include
        android:id="@+id/account_picker_state_signin_in_progress"
...
