<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2024 The Chromium Authors
Use of this source code is governed by a BSD-style license that can be
found in the LICENSE file.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/min_touch_target_size"
    android:orientation="vertical">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filter_item_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    <View
        android:layout_marginEnd="@dimen/list_item_default_margin"
        android:layout_marginStart="@dimen/list_item_default_margin"
        android:importantForAccessibility="no"
        style="@style/HorizontalDivider" />
    <TextView
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target_size"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/close"
        style="@style/TextButton" />
</LinearLayout>
